src/chrome/komodo/skin/komodo.p.css
/* ... */
/* Support full screen toolbar auto-hide */
#toolbox_main {
  -moz-binding: url("chrome://komodo/content/bindings/toolbar.xml#toolbox");
}
#toolbox_main[_fullscreen] > [anonid="children-box"] {
  height: 0;
  overflow-y: hidden;
  -moz-transition-duration: 5s;
  -moz-transition-delay: 0.25s;
}
#toolbox_main[_fullscreen]:hover > [anonid="children-box"] {
  height: initial;
  -moz-transition-duration: 5s;
  -moz-transition-delay: 0.25s;
}
#toolbox_main:not([_fullscreen]) > [anonid="hover-box"] {
  visibility: collapse;
}
#toolbox_main[_fullscreen] > [anonid="hover-box"] {
  height: 1px;
  margin-bottom: 0;
}
/* when in fullscreen mode, hide menubars, toolbars, and statusbars that are
   not marked with [fullscreentoolbar], except those that are immediate children
   of the main toolbox row. */
/* #if PLATFORM == "darwin" */
[sizemode="kofullscreen"]:root :not(#main-toolboxrow) > :-moz-any(menubar, toolbar, statusbar):not([fullscreentoolbar]) {
  visibility: collapse;
}
/* #else */
[sizemode="fullscreen"]:root :not(#main-toolboxrow) > :-moz-any(menubar, toolbar, statusbar):not([fullscreentoolbar]) {
  visibility: collapse;
}
/* #endif */
/* when not in fullscreen mode, hide any elements marked as [fullscreencontrol]
   (i.e. those that should only be shown in full screen) */
:root:not([sizemode="fullscreen"]) [fullscreencontrol] {
  display: none;
}

#toolbox_main #toolbar-menubar {
  padding-top: 0;
}

#menubar_main {
  -moz-appearance: menubar;
  padding-top: 0;
}

#menubar_main > #window-controls > toolbarbutton {
  -moz-appearance: none;
}

#menubar_main > #window-controls > toolbarbutton:hover {
  border-color: transparent;
}

#minimize-button {
  list-style-image: url("chrome://global/skin/icons/Minimize.gif");
}

#restore-button {
  list-style-image: url("chrome://global/skin/icons/Restore.gif");
}

#close-button {
  list-style-image: url("chrome://global/skin/icons/Close.gif");
}

/* #if PLATFORM == "darwin" */
/* OS X 10.6 is Darwin 10.* */
:root:not([os-version^="10."]) #fullscreen-restore-button {
  display: none;
}
#fullscreen-restore-button {
  list-style-image: url("chrome://global/skin/media/fullscreenButton.png");
  -moz-image-region: rect(0px, 32px, 16px, 16px);
}
@media screen and (min-resolution: 2dppx) {
  #fullscreen-restore-button {
    list-style-image: url("chrome://global/skin/media/fullscreenButton@2x.png");
    -moz-image-region: rect(0px, 64px, 32px, 32px);
  }
}
/* #endif */

toolbar[printpreview="true"] {
  -moz-binding: url("chrome://global/content/printPreviewBindings.xml#printpreviewtoolbar");
}

#main-toolboxrow {
  min-width: 1px;
  -moz-appearance: toolbar;
  border-bottom: 1px solid ThreeDShadow;
  -moz-binding: url('chrome://komodo/content/bindings/toolbar.xml#toolboxrow-overflow');
}

#main-toolboxrow > [first-overflow] ~ *,
#main-toolboxrow > [first-overflow] [first-child-overflow],
#main-toolboxrow > [first-overflow] [first-child-overflow] ~ * {
  /* things that would overflow in the toolboxrow */
  visibility: hidden;
}

#main-toolboxrow > .overflow-toolbarbutton > .toolbarbutton-menu-dropmarker {
  /* the dropmarker on the toolboxrow overflow button */
  visibility: collapse;
}

#main-toolboxrow .overflow-menupopup [disabled] .menu-iconic-icon {
  opacity: 0.5;
}

#main-toolboxrow > toolbar {
  -moz-appearance: none;
  border: none;
}

#noPreviewAvailable 
{
  background-color: white !important;
  font-size: 12px !important;
}
 
/* ::::: tooltip :::::
  copied from popup.css, but modified to be a class rather than
  element name.  */

popup[type="tooltip"] {
  -moz-binding: url('chrome://komodo/content/bindings/widgets.xml#kotooltip');
  -moz-appearance: tooltip;
  margin-top: 11px;
  border: 1px solid InfoText;
  padding: 2px 3px;
  max-width: 40em;
  background-color: InfoBackground;
  color: InfoText;
  font: message-box;
}

.tooltip-label {
  margin: 0px !important;
}

label[highlite="true"],
statusbarpanel[highlite="true"] {
  margin: 0px;
  padding: 0px;
}

statusbarpanel label[highlite="true"],
statusbarpanel[highlite="true"] > label {
  color: highlighttext;
  background-color: highlight;
  margin: 0px 0px 0px 0px;
  padding: 1px 10px 2px 10px;
}

menu.statusbar-label > label,
menuitem.statusbar-label > label
{
  font: status-bar;
  text-align: left;
}
statusbarpanel > toolbarbutton {
  padding: 0px;
  margin: 0px;
  border-style: none;
  -moz-appearance: none;
}
statusbarpanel > toolbarbutton > .toolbarbutton-text {
  font: status-bar;
  text-align: left;
  padding-left: 6px;
  padding-right: 2px;
}
statusbarpanel > toolbarbutton[type="menu"] > dropmarker {
  /*
   The moz appearance is necessary to override the additional image provided
   by the toolbarbutton menu image (provided through a xbl binding).
   http://bugs.activestate.com/show_bug.cgi?id=79320
  */
  -moz-appearance: none !important;
  list-style-image: url("chrome://komodo/skin/images/menupopup_arrows.png");
}


/**
 * Status bar messages
 */

#statusbar-message-wrap, #statusbar-message, #statusbar-message > label {
  border: none;
  min-width: 0;
  width: 0;
  -moz-appearance: none;
  -moz-box-flex: 1;
  -moz-box-pack: start;
}

#statusbar-message-wrap button.close-button {
  margin: 0 !important;
  padding: 0 !important;
  min-width: 0;
}

#statusbar-message[category="notification-info"] {
    list-style-image: url("chrome://global/skin/icons/information-16.png");
}

#statusbar-message[category="notification-warning"] {
    list-style-image: url("chrome://global/skin/icons/warning-16.png");
}

#statusbar-message[category="notification-error"] {
    list-style-image: url("chrome://global/skin/icons/error-16.png");
}


/**
 * Syntax checking statusbar images.
 */
#statusbar-check.syntax-okay {
    list-style-image: url("chrome://komodo/skin/images/icon_check_ok.png");
}

#statusbar-check.syntax-in-progress {
    list-style-image: url("chrome://komodo/skin/images/icon_check_inprogress.png");
}
/* ... */

